--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,19 +48,56 @@
       <p>&nbsp;</p>
     </div>
 
-    <footer>
-        <div class="col-md-4">
+<!--    <footer>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <p><a href="http://www.adea.org/" target="_blank">©2017 American Dental Education Association® (ADEA)</a><br />
           655 K Street, NW, Suite 800<br />
           Washington, DC 20001  <br />
           202-289-7201</p>
         </div>
-        <div class="col-md-8">
+        <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
           <p><a href="http://www.adea.org/GoDental/" target="_blank">ADEA: GoDental</a></p>
           <p><a href="/terms">Terms of use</a></p>
           <p><a href="">Privacy Policy</a></p>
         </div>
+    </footer> -->
+    <footer>
+      <div class="row">
+
+        <div class="col-sm-4 col-md-3 col-sm-push-8 col-md-push-9">
+          <ul class="footer-social">
+            <li class="facebook"><a href="https://www.facebook.com/ADEAGoDental1" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/facebook.png" alt=""></a></li>
+            <li class="twitter"><a href="https://twitter.com/adeagodental" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/twitter.png" alt=""></a></li>
+            <li class="youtube"><a href="http://www.youtube.com/user/AADSASAnswers" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/youtube.png" alt=""></a></li>
+            <li class="instagram"><a href="http://instagram.com/adeagodental/" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/Instagram ICON FOR WEBSITE.png" alt=""></a></li>
+          </ul>
+          <a id="ctl00_ctlSignupNewsletter_HyperLink1" class="btn btn-red btn-block btn-large signup-button" href="https://access.adea.org/adeassa/censsacustmast.insert_page?p_return_page=Login_Page&amp;p_varname=p_val_arr%5b0%5d&amp;p_colname=p_last_nm&amp;p_varname=p_val_arr%5b1%5d&amp;p_colname=p_alias&amp;p_varname=p_val_arr%5b2%5d&amp;p_colname=p_login_id&amp;p_varname=p_val_arr%5b3%5d&amp;p_colname=p_passwd&amp;p_context=GODENT" target="_blank">Sign Up For Our Newsletter!</a>
+        </div>
+
+        <div class="col-sm-8 col-md-9 col-sm-pull-4 col-md-pull-3">
+          <ul class="footer-links clearfix">
+            <li><a href="http://www.adea.org/GoDental/About_ADEA_GoDental.aspx" target="_self">ADEA GoDental</a></li>
+            <li><a href="http://www.adea.org/GoDental/Our_Mission.aspx" target="_self">Our Mission</a></li><li><a href="http://www.adea.org/GoDental/ADEA_GoDental_Privacy_Policy.aspx" target="_self">Privacy Policy</a></li>
+            <li><a href="http://www.adea.org/GoDental/Site_Pages/Contact_Us.aspx" target="_self">Contact Us</a></li>
+            <!-- <li><a href="http://www.adea.org/GoDental/Sitemap.aspx" target="_self">Sitemap</a></li> -->
+          </ul>
+          <ul class="footer-links clearfix">
+            <li><a href="http://www.adea.org/about_adea/Pages/default.aspx" target="_self">About ADEA</a></li>
+            <li><a href="http://www.adea.org/about_adea/MembershipInformation/Pages/default.aspx" target="_self">Membership</a></li>
+            <li><a href="http://www.adea.org/Secondary.aspx?id=17137" target="_self">Education &amp; Events</a></li>
+            <li><a href="http://www.adea.org/policy_advocacy/Pages/default.aspx" target="_self">Policy</a></li>
+            <li><a href="http://adea.org/advocacy" target="_self">Advocacy</a></li>
+            <li><a href="http://www.adea.org/publications/Pages/default.aspx" target="_self">Publications &amp; Data</a></li>
+            <li><a href="http://www.adea.org/Secondary.aspx?id=17139" target="_self">Career Center</a></li>
+          </ul>
+        </div>
+
+      </div>
+      <div class="copyright">
+        ©2017 American Dental Education Association, 655 K Street, NW, Suite 800, Washington, DC 20001. Phone (202) 289-7201.
+      </div>
     </footer>
+
   </body>
 </html>
 <script>
