CSS layout changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,7 +144,7 @@ h3 {
 }
 
 h4 {
-	margin-top: 2em;
+	// margin-top: 2em;
   text-transform: uppercase;
 }
 
@@ -183,7 +183,7 @@ a:active, a:hover {
 
 .overlay{
   background: $primary-bg-color;
-  padding-top: 40px;
+  //padding-top: 40px;
   padding-bottom: 5px;
 }
 
