Application name linked to homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <div data-role="toolbar" data-position="fixed" class="navbar-header">
         <div class="logo">
           <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %></a>
-          <p class="logo-text">ADEA Dental Schools Explorer</p>
+          <p class="logo-text"><a class="logo-link" href="/index">ADEA Dental Schools Explorer</a></p>
         </div>
       </div>
       <div class="header-nav">
