Schools Information - June 23, 2017

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,13 @@
     <header>
       <div data-role="toolbar" data-position="fixed" class="navbar-header">
         <div class="logo">
-          <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %></a>
-          <p class="logo-text"><a class="logo-link" href="/index">ADEA Dental Schools Explorer</a></p>
+          <div class="left">
+            <a class="logo-link" href="/index"><%= image_tag("adealogo.png", class: "logo-img") %></a>
+            <p class="logo-text"><a class="logo-link" href="/index">ADEA Dental School Explorer</a></p>
+          </div>
+          <div class="right">
+            <a class="logo-description" href="http://adea.org" target="_blank"><%= image_tag("logo-description.png", class: "logo-description") %></a>
+          </div>
         </div>
       </div>
       <div class="header-nav">
