--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,15 +220,19 @@ a:active, a:hover {
 }
 .logo-img {
   padding-right: 15px;
+  padding-bottom: 13px;
   width: 250px;
 }
 .logo-text {
   position: absolute;
   left: 0px;
   top: 60px;
-  // font-weight: bold;
+  font-weight: bold;
 }
 
+.logo-description {
+  padding-top: 30px;
+}
 
 .main-img {
   height: 30px;
@@ -237,6 +241,10 @@ a:active, a:hover {
   object-fit: cover;
   height: 420px;
   width: 100%;
+}
+
+.right {
+  display: none;
 }
 
 ////////////////// form module //////////////////
@@ -594,6 +602,20 @@ table th:first-child {
     pointer-events:none;
     text-transform: uppercase;
     font-size: 20px;
+  }
+
+  .right {
+    display: block;
+    float: right;
+    min-width: 60vw;
+    text-align: right;
+  }
+
+  .left {
+    display: block;
+    float: left;
+    min-width: 30vw;
+    text-align: left;
   }
 
 
