--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -12,11 +12,13 @@
         <div class="collapse" id="collapseFilter<%= this_index %>">
           <div style="max-height:400px; overflow-y:scroll;">
             <% $filter_values[this_index].each do |item| %>
-              <p class="filter-option">
-                <input value="<%= item.field_value %>" class="checkbox-input" type="checkbox" name="<%= this_filter.custom_filter %>[]" id="<%= item.field_value %>"
-                  <% if ( params[this_filter.custom_filter].present? && params[this_filter.custom_filter].include?(item.field_value) ) %> checked <% end %> />
-                <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value %></label>
-              </p>
+              <% if ( !item.field_value.blank? ) %>
+                <p class="filter-option">
+                  <input value="<%= item.field_value %>" class="checkbox-input" type="checkbox" name="<%= this_filter.custom_filter %>[]" id="<%= item.field_value %>"
+                    <% if ( params[this_filter.custom_filter].present? && params[this_filter.custom_filter].include?(item.field_value) ) %> checked <% end %> />
+                  <label class="checkbox-label" for="<%= item.field_value %>"><%= item.field_value %></label>
+                </p>
+              <% end %>
             <% end %>
           </div>
         </div>
