--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -26,7 +26,7 @@
         <% end
       end %>
 
-      <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
+      <p><%= link_to( 'Clear all filters/keywords' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
 
       <h2>Search result: <%= pluralize(@programs.size, 'Dental School') %></h2>
 
