Secure social media icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,10 +73,10 @@
 
         <div class="col-sm-4 col-md-3 col-sm-push-8 col-md-push-9">
           <ul class="footer-social">
-            <li class="facebook"><a href="https://www.facebook.com/ADEAGoDental1" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/facebook.png" alt=""></a></li>
-            <li class="twitter"><a href="https://twitter.com/adeagodental" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/twitter.png" alt=""></a></li>
-            <li class="youtube"><a href="http://www.youtube.com/user/AADSASAnswers" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/youtube.png" alt=""></a></li>
-            <li class="instagram"><a href="http://instagram.com/adeagodental/" target="_blank"><img src="http://www.adea.org/uploadedImages/GoDental/Icons/Instagram ICON FOR WEBSITE.png" alt=""></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/ADEAGoDental1" target="_blank"><%= image_tag("facebook.png") %></a></li>
+            <li class="twitter"><a href="https://twitter.com/adeagodental" target="_blank"><%= image_tag("twitter.png") %></a></li>
+            <li class="youtube"><a href="http://www.youtube.com/user/AADSASAnswers" target="_blank"><%= image_tag("youtube.png") %></a></li>
+            <li class="instagram"><a href="http://instagram.com/adeagodental/" target="_blank"><%= image_tag("instagram.png") %></a></li>
           </ul>
           <a id="ctl00_ctlSignupNewsletter_HyperLink1" class="btn btn-red btn-block btn-large signup-button" href="https://access.adea.org/adeassa/censsacustmast.insert_page?p_return_page=Login_Page&amp;p_varname=p_val_arr%5b0%5d&amp;p_colname=p_last_nm&amp;p_varname=p_val_arr%5b1%5d&amp;p_colname=p_alias&amp;p_varname=p_val_arr%5b2%5d&amp;p_colname=p_login_id&amp;p_varname=p_val_arr%5b3%5d&amp;p_colname=p_passwd&amp;p_context=GODENT" target="_blank">Sign Up for the ADEA GoDental Newsletter!</a>
         </div>
