--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,10 @@
 
         <% if @display_username %>
           <!-- <a class="btn navbar-btn btn-inverse" href="/index"><span class="glyphicon glyphicon-search"></span></a> -->
+          <%= link_to 'SETTINGS', { controller: "settings" }, class: "btn navbar-btn btn-inverse" %>
           <%= link_to 'SIGN OUT', sign_out_path, method: :delete, class: "btn navbar-btn btn-inverse" %><br/>
         <% else %>
+          <%= link_to 'SETTINGS', { controller: "settings" }, class: "btn navbar-btn btn-inverse not-visible" %>
           <%= link_to 'SIGN OUT', sign_out_path, method: :delete, class: "btn navbar-btn btn-inverse not-visible" %><br/>
         <% end %>
         <a class="logo-description" href="http://adea.org" target="_blank"><%= image_tag("logo-description.png") %></a>
