--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -12,13 +12,13 @@
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
             <div class="form-group">
               <%= label_tag(:sf_edit_from, "From:") %>
-              <%= date_field_tag(:sf_edit_from, @editing_from, class: "form-control") %>
+              <%= date_field_tag(:sf_edit_from, @editing_from, class: "form-control", style: "width: 250px; display: inline;") %>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
             <div class="form-group">
               <%= label_tag(:sf_edit_to, "To:") %>
-              <%= date_field_tag(:sf_edit_to, @editing_to, class: "form-control") %>
+              <%= date_field_tag(:sf_edit_to, @editing_to, class: "form-control", style: "width: 250px; display: inline;") %>
             </div>
           </div>
         </div>
