--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -1,37 +1,40 @@
 <div class="row">
   <div class="overlay col-md-10 col-md-offset-1">
     <div class="information-page" id="<%= @program.id %>">
-      <h1 class="info-hed"><%= @program.program %></h1>
+      <h1 class="info-hed"><%= @program.program %></h1> <%= link_to( "VIEW" , {:controller => 'programs', :action => 'information', :id => params[:id] , :edit => false }, :class => "btn navbar-btn btn-inverse" ) %> <%= link_to( "EDIT" , {:controller => 'programs', :action => 'information', :id => params[:id] , :edit => true }, :class => "btn navbar-btn btn-inverse" ) %>
 
       <% this_section = "" %>
-      <div>
-        <div>
-          <% @fields_to_display.each do |f| %>
 
-            <% if ( this_section != f.section_name ) %>
-              </div>
-              </div>
-              <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>" aria-expanded="false" aria-controls="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
-                <span class="glyphicon glyphicon-menu-down nodisplay"></span> <%= f.section_name %>
-              </a>
-              <br />
-              <div class="collapse" id="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
-                <div class="info-well">
-                  <% this_section = f.section_name %>
-            <% end %>
-            <%= display_fields_and_tables(f) %>
-            <% if ( f.equal?(f.section_name.last) ) %>
-                </div>
-              </div>
-            <% end %>
+      <% @fields_to_display.each do |f| %>
 
+        <% if ( this_section != f.section_name ) %>
+          <% if ( this_section != "" ) %>
+            </form>
+            </div>
+            </div>
+          <% end %>
+          <% section_name_trimmed = f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>
+          <a class="btn btn-lg btn-primary btn-header collapsed" role="button" data-toggle="collapse" href="#collapse_<%= section_name_trimmed %>" aria-expanded="false" aria-controls="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
+            <span class="glyphicon glyphicon-menu-down nodisplay"></span> <%= f.section_name %>
+          </a>
+          <br />
+          <!-- opening divs -->
+          <div class="collapse" id="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
+            <div class="info-well">
+              <% this_section = f.section_name %>
+              <form name="<%= section_name_trimmed %>">
         <% end %>
-        </div>
-        </div>
+        <%= display_fields_and_tables(f, @edit) %>
+
+      <% end %>
+
+      <!-- closing divs -->
+      </div>
+      </div>
+
     </div>
 
     <!-- Back to index.html -->
     <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
   </div>
 </div>
-
