--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -77,3 +77,25 @@
     </div>
 
 </div>
+
+<script>
+
+    $("label:contains('(field)')").click(function(){
+        $(this).find('> span').toggleClass("arrowup");
+        console.log("arrow up");
+    });
+
+    if ($(window).width() < 768) {
+        $("#collapseAllFilters").removeClass("in");
+    } else {
+        $("#collapseAllFilters").addClass("in");
+    }
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-25560883-14', 'auto');
+    ga('send', 'pageview');
+</script>
