--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -64,13 +64,17 @@ $(document).ready(function(){
       $("#success-<%= f.id %>").click(function(){
           $("#current-<%= f.id %>").hide();
           $("#proposal-<%= f.id %>").hide();
-          $("#new-<%= f.id %>").fadeIn('slow');
-          $.ajax("/approve_change/<%= @id %>/<%= f.id %>");
+          <% if f.field_value_temp != "(((DELETE)))" %>
+            $("#new-<%= f.id %>").fadeIn('slow');
+          <% else %>
+            $("#new-<%= f.id %>").hide();
+          <% end %>
+          $.ajax("/approve_change/<%= @id %>/<%= f.id %>/<%= f.field_type %>");
       });
       $("#reject-<%= f.id %>").click(function(){
           $("#current-<%= f.id %>").fadeIn('slow');
           $("#proposal-<%= f.id %>").fadeOut('slow');
-          $.ajax("/reject_change/<%= @id %>/<%= f.id %>");
+          $.ajax("/reject_change/<%= @id %>/<%= f.id %>/<%= f.field_type %>");
       });
     <% end %>
   <% end %>
