--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,12 @@
 
         <% if @display_username %>
           <!-- <a class="btn navbar-btn btn-inverse" href="/index"><span class="glyphicon glyphicon-search"></span></a> -->
-          <% if session[:user_roles] == "editor01" %>
+          <% if session[:user_role] == "editor" %>
             <%= link_to 'SETTINGS', { controller: "settings" }, class: "btn navbar-btn btn-inverse" %>
           <% end %>
           <%= link_to 'SIGN OUT', sign_out_path, method: :delete, class: "btn navbar-btn btn-inverse" %><br/>
         <% else %>
-          <% if session[:user_roles] == "editor01" %>
+          <% if session[:user_role] == "editor" %>
             <%= link_to 'SETTINGS', { controller: "settings" }, class: "btn navbar-btn btn-inverse not-visible" %>
           <% end %>
           <%= link_to 'SIGN OUT', sign_out_path, method: :delete, class: "btn navbar-btn btn-inverse not-visible" %><br/>
