--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="overlay col-md-8 col-md-offset-2">
     <h3>Welcome, <%= @display_username %></h3>
+    <h4><%= link_to( session[:school_display] , {:controller => 'programs', :action => 'information', :id => [@id, session[:school_display].parameterize].join("-")} ) %></h4>
 
     <%= render 'form' %>
 
