--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -9,8 +9,8 @@
       <h1 class="info-hed"><%= @program.program %></h1>
 
       <% if @show_buttons %>
-        <%= link_to( "VIEW" , {:controller => 'programs', :action => 'information', :id => params[:id], :edit => false }, :class => "btn navbar-btn btn-inverse" ) %>
-        <%= link_to( "EDIT" , {:controller => 'programs', :action => 'information', :id => params[:id], :edit => true }, :class => "btn navbar-btn btn-inverse" ) %>
+        <%= link_to( "VIEW" , {:controller => 'programs', :action => 'information', :id => params[:id], :mode => 'view' }, :class => "btn navbar-btn btn-inverse" ) %>
+        <%= link_to( "EDIT" , {:controller => 'programs', :action => 'information', :id => params[:id], :mode => 'edit' }, :class => "btn navbar-btn btn-inverse" ) %>
       <% end %>
 
       <% this_section = "" %>
