--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -257,7 +257,7 @@ a:active, a:hover {
   display: block;
   white-space: pre-wrap;
   font-family: $font;
-  width: 99%;
+  //width: 99%;
   overflow: auto;
 }
 
