--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -3,7 +3,7 @@
     <h3>Welcome, <%= @display_username %></h3>
     <% if session[:user_role] == 'editor' %>
       <% if @schools_pending_approval.count > 0 %>
-        <h3>Schools pending for review:</h3>
+        <h3><%= pluralize(@schools_pending_approval.size, 'school') %> pending for review:</h3>
         <% @schools_pending_approval.each do |school| %>
           <h4><%= link_to( school.program , {:controller => 'programs', :action => 'information', :id => [school.program_id, school.program.parameterize].join("-"), :mode => 'view'} ) %></h4>
         <% end %>
