Special access fix for unknown user roles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -713,3 +713,29 @@ table th:first-child {
 
 
 }
+
+//////////// PRINT /////////
+//@media print {
+//
+//  footer {
+//    display: none;
+//  }
+//
+//  header {
+//    display: none;
+//  }
+//
+//  .collapse {
+//    display: block !important;
+//    height: auto !important;
+//  }
+//
+//  .container {
+//    padding: 0 10% 0 10%;
+//  }
+//
+//  #show_all_schools {
+//    display: none;
+//  }
+//
+//}
