--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Back to index.html -->
-    <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
+    <p id="show_all_schools"><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
   </div>
 </div>
 
