--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -622,9 +622,15 @@ table th:first-child {
 }
 //////////// DESKTOP /////////
 @media screen and (max-width: 820px) {
-.logo-description {
-  display: none;
-}
+  .logo-description {
+    display: none;
+  }
+
+  .save-button {
+    padding: 10px 16px 10px 16px;
+    margin: 5px;
+    font-size: 1em;
+  }
 }
 
 @media screen and (min-width: 768px) {
